--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_BASEURL = "https://valo-lab-api-1.onrender.com"
+NEXT_PUBLIC_API_BASEURL = "https://valo-lab-api-1.onrender.com/api"
