--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_BASEURL = "https://valo-lab-api-1.onrender.com/api"
+GOOGLE_CLIENT_ID = "1033371696101-3pomesng14bp5c324ppaeol5l70crtk1.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
