新機能追加

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 NEXT_PUBLIC_API_BASEURL = "https://valo-lab-api-1.onrender.com/api"
+NEXTAUTH_SECRET = "ljsfgblskkbalkapbpfdoig95l4poa93daf9"
 GOOGLE_CLIENT_ID = "1033371696101-3pomesng14bp5c324ppaeol5l70crtk1.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET = "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"
+X_CLIENT_ID = "dUd0NXV1a29jTU1sMFhBbzg1MFE6MTpjaQ"
+X_CLIENT_SECRET = "eCmZKLQk7AQ1NI6qnfIk6DxWuvtU5C2o3YLcMrw6YTJO_vX4Si"
+NEXTAUTH_URL = "http://localhost:3000"
